--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -416,103 +416,103 @@ CSA_mexican_csa_freindship:0 "Has signed a treaty of friendship with our Mexican
 scientific_phalanstere:0 "The scientific wing of the Phalanstere organisation has been formed"
 
 ### Events ###
-combinedsyndicates.1.t:0 "The Second American Revolution"
-combinedsyndicates.1.d:0 "The Central Committee of the Combined Syndicates of America have issued a proclamation that all power in the former United States has now legitimately passed to the working classes, to be exercised through a Continental Chamber of Syndicates and defended from external enemies by the Revolutionary Syndicate Guards. The Secretary of the new Chamber is..."
-combinedsyndicates.1.a:0 "James P. Cannon, to improve worker's rights"
-combinedsyndicates.1.b:0 "Max Schachtman, to nationalise the major industrial concerns"
-combinedsyndicates.1.c:0 "Paul Mattick, to sweep away all vestiges of the capitalist system"
-combinedsyndicates.1.e:0 "William Z. Foster, to create a disciplined army of labour"
-combinedsyndicates.2.t:0 "Where Will we govern from?"
-combinedsyndicates.2.d:0 "With the end of the civil war, we should decide where our capital will be. Will it stay at Chicago or will it be moved back to Washington?"
-combinedsyndicates.2.a:0 "Capital remains in Chicago."
-combinedsyndicates.2.b:0 "Washington has been cleansed of capitalist influences."
-combinedsyndicates.3.t:0 "Rebuilding Revolutionary America"
-combinedsyndicates.2.c:0 "Let us move the capital to New York City instead!"
-combinedsyndicates.2.e:0 "Let us move the capital to Philadelphia instead!"
+combinedsyndicates.1.t:0 "두 번째 미국 혁명"
+combinedsyndicates.1.d:0 "결집된 미국의 생디칼리즘 중앙 위원회는 과거 미국의 모든 권력을 합법적으로 노동자에게 전달했다는 선언을 발표했습니다. 대륙 생디칼리스트의 회의에서 행사되었고 외부의 적으로부터 혁명 생디칼리즘 수비대가 이것을 지킬 것 입니다. 이 회의의 새로운 서기장은..."
+combinedsyndicates.1.a:0 "제임스 P. 캐논, 노동자 권리의 증진"
+combinedsyndicates.1.b:0 "막스 샤흐트만, 주요 산업의 국유화"
+combinedsyndicates.1.c:0 "폴 매틱, 자본주의 체제의 모든 흔적 제거"
+combinedsyndicates.1.e:0 "월리엄 Z. 포스터, 규율이 있는 노동자의 군대 창설"
+combinedsyndicates.2.t:0 "어디에서 통치할 것 입니까?"
+combinedsyndicates.2.d:0 "내전이 종료됨과 함께, 우리는 수도를 어디에 정해야 할지 결정해야 했습니다. 시카고에 남겠습니까? 아니면 워싱턴으로 되돌아가겠습니까?"
+combinedsyndicates.2.a:0 "수도는 시카고에 남아 있을 것이다.."
+combinedsyndicates.2.b:0 "워싱턴은 자본주의의 영향력으로부터 깨끗해졌다."
+combinedsyndicates.3.t:0 "혁명 미국을 재건하자"
+combinedsyndicates.2.c:0 "대신에 우리는 뉴욕으로 수도를 옮길 것이다!"
+combinedsyndicates.2.e:0 "대신에 우리는 필라델피아로 수도를 옮길 것이다!"
 combinedsyndicates.3.d:0 "The civil war had caused great damage throughout the country and there was much that needed to be done to ensure that the US would be great again. Reed believed that a strong industrial base would not only help the country rebuild but also help with unemployment. The rebuilding of the country would not be easy and would require a great deal of planning."
 combinedsyndicates.3.a:0 "5 Year Plan"
 combinedsyndicates.3.b:0 "3 Year Plan"
 combinedsyndicates.3.c:0 "1 Year Plan"
-combinedsyndicates.4.t:0 "Land and agricultural reforms"
-combinedsyndicates.4.d:0 "Land and agricultural reforms were a hot button issue for the Syndicates. Would they implement a harsh program of collectivisation administered directly by the central government? Or would they allow for local syndicates to manage farmers? Another proposal would allow for farmers to have some guaranteed prices and also allow limited market involvement."
-combinedsyndicates.4.a:0 "Start the Collectivisation process."
-combinedsyndicates.4.b:0 "Let farming be run by local syndicates."
-combinedsyndicates.4.c:0 "Have land redistribution, but with limited market involvement"
-combinedsyndicates.5.t:0 "Invitation to the Internationale"
-combinedsyndicates.5.d:0 "The Commune of France has decided that we are now ready to join the Global Syndicalist cause and many in our nation are wondering what we will do?"
-combinedsyndicates.5.a:0 "We must join arms with France"
-combinedsyndicates.5.b:0 "We must reorganise our own country"
-combinedsyndicates.6.t:0 "The CSA wants to join the Internationale"
-combinedsyndicates.6.d:0 "The Combined Syndicates of America expressed their intention to join our alliance. For the world revolution!"
-combinedsyndicates.6.a:0 "Welcome!"
-combinedsyndicates.7.t:0 "Emigrants"
-combinedsyndicates.7.d:0 "Some of The elites and the upper class of the Great Lakes have left their homes and took their families across the border to Royalist Canada."
-combinedsyndicates.7.a:0 "Close the Ambassador Bridge and Patrol the Detroit River!"
-combinedsyndicates.7.b:0 "Let The Pitiful, Isolated Individuals go where they belong!"
-combinedsyndicates.8.t:0 "The Nationalisation of the Banking System"
-combinedsyndicates.8.d:0 "The Revolution is in need of funding, and one of the ideas presented by Max Schachtman is to nationalise the banks. Shall we make this into a decree?"
-combinedsyndicates.8.a:0 "Schachtman is right, nationalise all the Banks!"
-combinedsyndicates.8.b:0 "We'll find other sources of money, leave the Banking System as is"
-combinedsyndicates.9.t:0 "The America First Escape"
-combinedsyndicates.9.d:0 "With his defeat, Long and the AUS leadership had escaped to South America taking with him a sizeable amount of money and most of his remaining followers. Though he vowed to return, Reed and the CSA were not worried."
-combinedsyndicates.9.a:0 "They can run like cowards"
-combinedsyndicates.10.t:0 "Reed and the PSA Leadership"
-combinedsyndicates.10.d:0 "After the end of the civil war, the question of the PSA leadership was put before the CSA. The capitalist nature of the Pacific States was incompatible with the socialist nature of the CSA but it was also the thing that kept California one of the most technically adept places in America. Destroying the PSA leadership would destroy this but ensure that Reed would have full control of the industry on the West Coast."
-combinedsyndicates.10.a:0 "Purge them."
-combinedsyndicates.10.b:0 "We need them"
-combinedsyndicates.11.t:0 "US Government in Exile"
-combinedsyndicates.11.d:0 "The victory of the workers over the US government has forced them to flee from the country to Canada. The government has vowed to keep on fighting but without a firm power base there is very little chance of them making a difference."
-combinedsyndicates.11.a:0 "Ha."
-combinedsyndicates.12.t:0 "Resources From the People"
-combinedsyndicates.12.d:0 "The trade unions and workers of the CSA have given the mighty resources of the Rustbelt to the government of the people."
-combinedsyndicates.12.a:0 "Adequate"
-combinedsyndicates.13.t:0 "The Boiling Point"
+combinedsyndicates.4.t:0 "토지와 농업 개혁"
+combinedsyndicates.4.d:0 "지역과 농업 개혁은 생디칼리즘에게 뜨거운 감자입니다. 농민들에게 중앙 정부에 의한 직접적인 냉혹한 집단화 계획을 실행해야 할까요? 아니면 지역 생디칼리트에게 농민을 운영해야 할까요? 다른 방안으로는 농민에게 일정한 가격을 보장하고, 제한된 시장에서 자신의 농작물을 판매하도록 허용 할 수 있을 겁니다."
+combinedsyndicates.4.a:0 "집단화를 시작한다."
+combinedsyndicates.4.b:0 "지방 생디칼리즘 정부에게 농민 운영을 맡긴다.."
+combinedsyndicates.4.c:0 "토지를 재분배하고 제한적 시장 거래를 허용한다."
+combinedsyndicates.5.t:0 "인터네셔널에 참가하다."
+combinedsyndicates.5.d:0 "프랑스 코뮌은 우리가 인터네셔널에 가입할 준비가 되어있다고 생각하며 많은 국가들이 우리가 뭘 할지 걱정하고 있습니다?"
+combinedsyndicates.5.a:0 "우리는 가입해서 프랑스와 함께 싸워야 한다."
+combinedsyndicates.5.b:0 "우리는 우리 국가를 재조직해야 한다."
+combinedsyndicates.6.t:0 "CSA가 인터네셔널에 가입하기 원합니다."
+combinedsyndicates.6.d:0 "결집된 미국의 생디칼리즘은 우리 동맹에 가입할 그들의 의도를 나타냈습니다. 혁명을 위해서요!“
+combinedsyndicates.6.a:0 "환영한다."
+combinedsyndicates.7.t:0 "이주"
+combinedsyndicates.7.d:0 "오대호에 사는 일부 엘리트와 상위 계급들이 그들의 집을 버리고 가족과 함께 왕실 캐나다를 향하여 떠나고 있습니다."
+combinedsyndicates.7.a:0 "앰배서더 다리 닫고 디트로이트 강을 순찰해라!"
+combinedsyndicates.7.b:0 "그 가련하고 고립된 개인이 그들이 원하는 곳으로 가게 냅둬라!"
+combinedsyndicates.8.t:0 "은행의 국유화"
+combinedsyndicates.8.d:0 "혁명에는 자금이 필요합니다. 그리고 은행 국유화라는 한 가지 주장이 막스 샤흐트만에 의해 제안되었습니다. 이것을 법령으로 만들겠습니까?"
+combinedsyndicates.8.a:0 "샤흐트만의 말이 옳다. 은행을 국유화 해라!"
+combinedsyndicates.8.b:0 "우리는 다른 방법으로 돈을 구할 수 있다. 은행 시스템은 내버려 둬라"
+combinedsyndicates.9.t:0 "미국 우선당의 도주"
+combinedsyndicates.9.d:0 "그들의 패배와 함께, 롱과 미국 우선당 지도부는 많은 돈과 추종자와 함께 남미로 도주했습니다. 그들은 돌아온다고 발표했지만 CSA와 리드는 걱정하지 않습니다."
+combinedsyndicates.9.a:0 "그들은 군중처럼 도망가는군"
+combinedsyndicates.10.t:0 "리드와 PSA 지도부"
+combinedsyndicates.10.d:0 "내전이 끝난 후에, PSA 리더쉽에 대한 문제가 생겼습니다. 이 태평양 주들의 자본가들은 CSA의 사회주의자랑 전혀 맞지 않습니다. 그러나 켈리포니아는 미국에서 가장 기술적으로 발전된 곳이며 그들을 숙청하는 것은 그 기술 역시 파괴 하는 것을 의미합니다. 그러나 그들을 숙청하면 서부 산업에 대한 완전한 통제권을 확보 할 수 있을 겁니다."
+combinedsyndicates.10.a:0 "그들을 숙청해라."
+combinedsyndicates.10.b:0 "우리는 그들이 필요하다."
+combinedsyndicates.11.t:0 "미국 정부의 추방"
+combinedsyndicates.11.d:0 "미국 정부에 대항한 노동자들의 승리는 그 국가를 캐나다로 추방시켰습니다. 그 정부는 계속 싸울 것을 발표했습니다. 그러나 그들이 싸울 기반이 없다면, 그러한 전복 시도는 희박한 확률만 가지게 될 겁니다."
+combinedsyndicates.11.a:0 "하."
+combinedsyndicates.12.t:0 "시민으로부터 자원"
+combinedsyndicates.12.d:0 "노동조합들과 CSA의 노동자들이 러스트 벨트의 많은 자원들을 인민의 정부에게 주었습니다."
+combinedsyndicates.12.a:0 "충분하군"
+combinedsyndicates.13.t:0 "분기점"
 combinedsyndicates.13.d:0 "The shooting had barely started when the CSA began to disintegrate. The loose coalition of socialists began to form sides. The Totalists began to form a government in Washington and were trying to exert their authority over the country. The Syndicalists were working with the trade unions to form local councils to run the recently conquered areas and were trying to buck the central authority. The Anarchists were not interested in either system and were causing trouble throughout the country."
 combinedsyndicates.13.a:0 "Side with the Totalists"
 combinedsyndicates.13.b:0 "Side with the Anarcho-syndicalists"
 combinedsyndicates.13.c:0 "Side with the Trade Unionists"
-combinedsyndicates.15.t:0 "The Southern Resistance"
-combinedsyndicates.15.d:0 "The Socialists had brought about an immediate end to the racial segregation laws in the south. This caused an immediate flare up of racial tensions and violence. Throughout the South remnants of Long's Minutemen have formed a pact with the KKK to oppose us and the revolution. They terrorise the local countryside and were reportedly responsible for more than one lynching."
-combinedsyndicates.15.a:0 "Blasted Reactionaries"
-combinedsyndicates.16.t:0 "Violence throughout the South"
-combinedsyndicates.16.d:0 "The racial tension that had been at the boiling point, boiled over, and erupted into violence. Groups of whites and blacks attacked each other as the local councils were unable to contain the issue. Tensions ran high as the South began to burn. Revolutionaries are demanding that we bring in more soldiers to the south."
-combinedsyndicates.16.a:0 "Damn Reactionaries"
-combinedsyndicates.17.t:0 "Peace comes to the South"
-combinedsyndicates.17.d:0 "With the People's Liberation Army in place throughout the south helping to set up and bring the revolution to the south, Peace and Order has finally come to the South. The revolutionary ideals of equality for everyone in America can now come even to the South."
-combinedsyndicates.17.a:0 "Finally!"
+combinedsyndicates.15.t:0 "남부의 저항"
+combinedsyndicates.15.d:0 "사회주의자들이 즉시 남부의 인종 차별 차별 정책을 중단시키자. 인종간의 긴장과 폭력이 즉시 발생했습니다. 남부 전역의 잔존한 일부 롱의 미니트맨들이 kkk단과 혁명과 우리에 대항하는 조약을 맺었습니다. 그들은 지역 농촌들을 테러하면서 많은 린치 사건을 일으키고 있습니다."
+combinedsyndicates.15.a:0 "반동주의자들을 비난해라"
+combinedsyndicates.16.t:0 "남부 전역에 폭력사태"
+combinedsyndicates.16.d:0 "인종간의 갈등은 정점에 도달하고 그걸 넘어서 폭력으로 폭파했습니다. 백인과 흑인들은 서로 공격을 했고, 지역 의회들이 이 문제를 통제조차 하지 못합니다. 남쪽이 점화하면서 긴장은 점점 더 극단적으로 바뀌고 있습니다. 혁명가들은 더 많은 병사들을 남부에 배치해야 한다고 요청 하고 있습니다."
+combinedsyndicates.16.a:0 "망할 반동분자들!"
+combinedsyndicates.17.t:0 "남부에 평화가 오다"
+combinedsyndicates.17.d:0 "인민 해방군이 남부 전역에 배치되고, 혁명을 남부에 혁명을 정착시키도록 도움에 따라서, 평화와 질서가 마침내 남부에 도착했습니다. 미국에서 모든 사람들을 위한 평등이라는 혁명적 이상은 남부에 도착한 겁니다."
+combinedsyndicates.17.a:0 "마침내!!"
 
 combinedsyndicates.18.t:0 "10 Years Since Bonnie and Clyde Passed Away"
 combinedsyndicates.18.d:0 "These two heroes did a lot of good for our nation then, as they were standing up against the capitalist government! They deserve a special day!"
 combinedsyndicates.18.a:0 "Happy Bonnie and Clyde day, mum."
-combinedsyndicates.19.t:0 "Jack Reed's Illness"
-combinedsyndicates.19.d:0 "The physical health of the Head of the Central Committee, Jack Reed, has been deteriorating for a while now, to the point that a public announcement has had to be made concerning it, as it can no longer be concealed. The exact cause of his illness is currently unknown, but the wasting effects of it are shortening his life. Whilst his passion for the revolution remains untempered, his ability to lead it may not last much longer."
-combinedsyndicates.19.a:0 "How dreadful"
-combinedsyndicates.20.t:0 "Jack Reed passes away"
-combinedsyndicates.20.d:0 "At 23:14 the Head of the Central Committee, Jack Reed, after valiantly fighting for his life and his country, and having managed to live to see his dream of a Syndicalist America, has passed away. An autopsy conducted showed that he died of a brain haemorrhage that was due to complications caused by a malignant tumour in his heart."
-combinedsyndicates.20.a:0 "A Hero of Labour dies today."
+combinedsyndicates.19.t:0 "잭 리드가 병에 들다."
+combinedsyndicates.19.d:0 "중앙 위원회의 수장인 잭 리드의 신체적 건강은 약화되고 있습니다. 이것을 더 이상 숨길 수 없기 때문에, 대중들에게 발표해야 했죠. 이 질병의 원인에 대해서 알 수 없습니다. 그러나 이 질병의 영향으로 그의 생명이 줄어드는 것은 분명합니다. 물론 그의 혁명에 대한 열정은 시들지 않았지만, 그의 신체는 혁명을 이끌기 어렵습니다."
+combinedsyndicates.19.a:0 "하필 이런 일이...."
+combinedsyndicates.20.t:0 "잭 리드가 세상을 뜨다."
+combinedsyndicates.20.d:0 "23:14분에 중앙 위원회의 수장으로 생디칼리즘 미국이라는 꿈을 이루기 위해 일생동안을 싸웠던 잭 리드는 오늘 세상을 떴습니다. 부검을 실행한 결과 심장에서 악성종양으로 인해 합병증이 생겨, 결국 뇌출혈로 죽었다고 추측합니다."
+combinedsyndicates.20.a:0 "오늘, 노동자들의 영웅이 죽었습니다.."
 
-combinedsyndicates.21.t:0 "Second Constitutional Convention"
-combinedsyndicates.21.d:0 "The time is here and all the delegates from across the country have arrived in Philadelphia to debate the future of America now that the revolution is won. Rather quickly numerous factions have formed from the various delegates. The Centralists seek to form a strong centralised government. The Unionists seek to establish a decentralised confederation with the power coming from the bottom up. With the Federalists in the middle seeking a balanced approach in terms of how the government should be structured."
-combinedsyndicates.21.a:0 "Welcome Everyone!"
-combinedsyndicates.22.t:0 "The New Republic's Structure"
-combinedsyndicates.22.d:0 "The first day of debates have resulted in three plans to set up the government. The first is put forth by William Z. Foster which posits that there should be a centralised congress with the states having little to no power. This drew immediate ire from the Unionists which countered with their own plan based around decentralised power. A delegate from the Federalists stepped forward with a third plan that tries to be a balanced though both argue it is not revolutionary enough and is just the old US government with a new name."
-combinedsyndicates.22.a:0 "The Federalist plan wins"
-combinedsyndicates.22.b:0 "The Centralists Plan wins"
-combinedsyndicates.22.c:0 "The Unionists Plan wins"
-combinedsyndicates.23.t:0 "General Seceretary's Power"
-combinedsyndicates.23.d:0 "The next day of debates has the delegates talking about how much power the General Secretary should have. The Unionists begin the day by saying that the position's power should be weak to prevent a dictatorship that would destroy America. The Centralists counter that only with a strong executive can the American worker be protected from reactionaries. Once again the Federalists faction has them playing the centre trying to balance the two factions and argue for a strong executive but one with plenty of checks and balances and a separation of powers to prevent him or her from being a dictatorship."
-combinedsyndicates.23.a:0 "The Federalists balanced executive"
-combinedsyndicates.23.b:0 "The Centralists strong executive"
-combinedsyndicates.23.c:0 "The Unionists Weak Executive"
-combinedsyndicates.24.t:0 "Policy towards Reactionaries"
-combinedsyndicates.24.d:0 "While the delegates were brought to Philadelphia to debate the nature of the republic, today a separate issue was brought up when a delegate asked: what should be done towards the reactionary traitors? This lead to numerous debate. The Unionists seek clemency for all and a chance for all those to build a new life in the new republic. While the Federalists claim that the leadership of those that fought the revolution must be put on trial. While the Centralists are claiming that all those who opposed the revolution must be judged for their deeds."
-combinedsyndicates.24.a:0 "Malice Towards None"
-combinedsyndicates.24.b:0 "The leaders shall be judged"
-combinedsyndicates.24.c:0 "All must meet their fate for opposing the revolution"
-combinedsyndicates.25.t:0 "The New Bureaucracy"
-combinedsyndicates.25.d:0 "Today the main question was the nature of the bureaucracy that we shall use. Two main plans were put forth one by the Unionists which argued for the new bureaucracy to be organised around the unions and much more democratic and decentralised. While Centralists countered with a strong top down bureaucracy that could help America with the federal government being able to fund education much better then a decentralised model. The federalists have split with some supporting the Unionists and others supporting the Centralists."
-combinedsyndicates.25.a:0 "New Civil Service"
-combinedsyndicates.25.b:0 "New State Bureaucracy"
+combinedsyndicates.21.t:0 "두 번째 헌법 회의"
+combinedsyndicates.21.d:0 "혁명에서 승리했기 때문에 전국에서 온 대표자들이 미국의 미래에 대해 토론하기 위해 필라델피아에 왔습니다. 그리고 다양한 대표들로부터 신속하게 다양한 파벌들이 형성되었죠. 중앙 집권주의자들은 강력한 중앙 정부를 모색합니다. 반대로 연방주의자들은 상향식으로 권력이 오는 분권화된 연방을 모색합니다. 중간에서 연방주의자들은 정부를 구조화해야한다는 측면에서 균형 잡힌 접근을 모색합니다."
+combinedsyndicates.21.a:0 "모두들 환영합니다.!"
+combinedsyndicates.22.t:0 "새로운 공화국의 구조"
+combinedsyndicates.22.d:0 "첫 번째 날 토론에서 정부 구조에 대한 3가지 계획이 상정 되었습니다. 첫 번째는 월리엄 Z. 포스터가 외친 것으로, 강력한 당 대회와 권력 없는 국가를 가정했습니다. 그 주장은 즉각적으로 반대쪽에서 분권화된 권력 체제을 생각하는 연합주의자의 분노를 이끌어 냈습니다. 연방주의자 대표자들은 두 주장 사이에서 균형을 잡은 또 다른 계획을 주장했습니다. 그러나 혁명가들은 그 주장이 구 미국 정부의 새 이름에 불과하다고 비판했습니다."
+combinedsyndicates.22.a:0 "연방주의자의 계획이 지지받았다."
+combinedsyndicates.22.b:0 "중앙 집권주의자의 계획이 지지받았다."
+combinedsyndicates.22.c:0 "연합주의자의 계획이 지지받았다."
+combinedsyndicates.23.t:0 "총 서기의 권력"
+combinedsyndicates.23.d:0 "다음 날 회의에서는 대표자들이 총서기가 얼마나 많은 권력을 가져야 하는지에 대한 토론을 했습니다. 이 날 연합주의자들은 총서기의 권력은 미국을 파괴할 독재자를 막기 위해서 약해야 한다고 말하기 시작했습니다. 그에 대해 중앙 집권주의자들은 오직 강력한 행정부만이 미국 노동자들을 반동주의자로부터 막을 수 있다고 반박 했죠. 연방주의자 파벌들은 또다시 두 파벌간의 균형을 맞추면서 강력한 행정부는 필요하지만 견제와 균형 그리고 권력 분립을 통해 독재의 위험성을 막아야 한다고 주장했습니다."
+combinedsyndicates.23.a:0 "연방주의자들의 균형된 행정부"
+combinedsyndicates.23.b:0 "중앙 집권주의자의 강력한 행정부"
+combinedsyndicates.23.c:0 "연반 주의자의 약한 행정부"
+combinedsyndicates.24.t:0 "반-혁명에 대한 정책"
+combinedsyndicates.24.d:0 "대표자들이 필라델피아에서 국가의 미래에 대한 토론을 하고 있을 동안, 오늘 일부 대표단이 물은 별도의 문제를 다뤄야 했습니다. 반동 반역자들을 어떻게 처리할 것인가?  그 것에 대한 다양한 토론이 이루어졌습니다. 연합주의자들은 그들에 대한 자비와 새로운 공화국 안에서 새로운 삶을 위한 기회를 줘야 한다고 주장했습니다. 반면에 연방주의자들은 혁명에 대항해서 싸운 지도부에 대한 재판은 필요하다고 주장했죠. 한편 중앙 집권주의자들은 혁명에 반대한 모든 사람들의 행위에 대해 처벌하자고 주장하고 있습니다."
+combinedsyndicates.24.a:0 "우리는 그들을 적대하지 않을 것이다."
+combinedsyndicates.24.b:0 "반동을 주도한 지도자는 재판을 받아야 할 것이다."
+combinedsyndicates.24.c:0 "혁명에 반대한 모든 사람들은 좋지 않은 운명을 맞이할 것이다."
+combinedsyndicates.25.t:0 "새로운 행정"
+combinedsyndicates.25.d:0 "오늘의 주요한 문제는 우리가 미래에 운용할 행정체제에 대한 겁니다. 두 개의 주요한 계획이 상정되었는데, 첫 번째는 연합주의자에 의해 상정된 것으로, 새로운 행정은 노동조합들에 근간하여 민주적으로 그리고 분권적으로 조직되어야 한다고 주장합니다. 반면에 중앙 집권주의자들은 강력한 하향식 행정부가 연방정부 통해 더 많은 자금을  교육에 제공해서 분권화된 모형보다 미국에 더 나을 것이라고 반박했습니다. 연방주의자들은 연합주의자와 중앙 집권주의자로 나뉘어져서있는 상태입니다."
+combinedsyndicates.25.a:0 "새로운 공무 제도"
+combinedsyndicates.25.b:0 "생디칼리즘 관료제"
 combinedsyndicates.26.t:0 "Centralist Victory"
 combinedsyndicates.26.d:0 "The Second convention is nearly over and it looks like the Centralists have turned out to be the victors in the convention. Their plan for a centralised republic can now be put into motion."
 combinedsyndicates.26.a:0 "Long Live America"
