운하 이벤트 번역

--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -774,17 +774,17 @@ combinedsyndicates.236.t:0 "Revolutionary Thanks"
 combinedsyndicates.236.d:0 "With our revolution successful. We should work to rebuild the relations with America. While the old regime of America supported the dictators and corrupt presidents, the new revolutionary America has changed tune and working towards supporting the people throughout the Americas."
 combinedsyndicates.236.a:0 "Gracias Camaradas!"
 
-combinedsyndicates.237.t:0 "Fate of the Canal?"
-combinedsyndicates.237.d:0 "With control of the Canal in our hands the question is now what to do with it. Some suggest that we should give it to Centroamérica, while others suggest that we give it to the Panamanians. While others suggest that we should keep it since it was built by Americans."
-combinedsyndicates.237.a:0 "Give it to Centroamérica"
-combinedsyndicates.237.b:0 "Give it to Panamá"
-combinedsyndicates.237.c:0 "Keep it"
-combinedsyndicates.238.t:0 "America has given us the Canal"
-combinedsyndicates.238.d:0 "The American have given us the canal. This is a great day for people throughout central America."
-combinedsyndicates.238.a:0 "Gracias Camaradas!"
-combinedsyndicates.239.t:0 "America has given us the Canal"
-combinedsyndicates.239.d:0 "The American have given us the canal. This is a great day for people throughout central America."
-combinedsyndicates.239.a:0 "Gracias Camaradas!"
+combinedsyndicates.237.t:0 "파나마 운하의 운명?"
+combinedsyndicates.237.d:0 "이제 운하가 우리 수중에 떨어졌지만 문제는 이걸 어떻게 하느냐 입니다. 일각에선 중앙아메리카에 이양해주자고 하고, 다른 한쪽에선 파나마에 이양해주자고 합니다. 또 다른 이들은 미국이 건설했으니 계속 소유하고 있기를 원하고 있습니다."
+combinedsyndicates.237.a:0 "중앙아메리카에 이양"
+combinedsyndicates.237.b:0 "파나마에 이양"
+combinedsyndicates.237.c:0 "계속 소유"
+combinedsyndicates.238.t:0 "미국이 우리에게 운하를 이양해주었습니다"
+combinedsyndicates.238.d:0 "미국이 우리에게 운하를 이양해주었습니다. 오늘은 중앙 아메리카인들에게 가장 기분 좋은 날일 것입니다."
+combinedsyndicates.238.a:0 "동지들이여 환호하라!"
+combinedsyndicates.239.t:0 "미국이 우리에게 운하를 이양해주었습니다"
+combinedsyndicates.239.d:0 "미국이 우리에게 운하를 이양해주었습니다. 오늘은 중앙 아메리카인들에게 가장 기분 좋은 날일 것입니다."
+combinedsyndicates.239.a:0 "동지들이여 환호하라!"
 
 combinedsyndicates.300.t:0 "The Catholic Workers Movement"
 combinedsyndicates.300.d:0 "With the end of the Revolution a number of religious groups have popped up dealing with helping in reconstruction. Of these groups the one that has attracted the most attention and popularity is the Catholic Workers Movement. Lead by Comrade Dorothy Day, the movement has attracted popularity for combining Catholicism with radical socialist values. The movement is noticeable for their focus on Works of Mercy and their Hospitality House for all those in need."
