--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -2295,36 +2295,36 @@ GAL_national_populist:0 "Galicia-Lodomeria"
 GAL_national_populist_ADJ:0 "Galician"
 GAL_national_populist_DEF:0 "Galicia-Lodomeria"
 
-GBR_totalist:0 "Union of Britain"
+GBR_totalist:0 "브리튼 연방"
 GBR_totalist_ADJ:0 "British"
-GBR_totalist_DEF:0 "The Union of Britain"
-GBR_syndicalist:0 "Union of Britain"
+GBR_totalist_DEF:0 "브리튼 연방"
+GBR_syndicalist:0 "브리튼 연방"
 GBR_syndicalist_ADJ:0 "British"
-GBR_syndicalist_DEF:0 "The Union of Britain"
-GBR_radical_socialist:0 "Union of Britain"
+GBR_syndicalist_DEF:0 "브리튼 연방"
+GBR_radical_socialist:0 "브리튼 연방"
 GBR_radical_socialist_ADJ:0 "British"
-GBR_radical_socialist_DEF:0 "The Union of Britain"
-GBR_social_democrat:0 "United Kingdom"
+GBR_radical_socialist_DEF:0 "브리튼 연방"
+GBR_social_democrat:0 "영국"
 GBR_social_democrat_ADJ:0 "British"
-GBR_social_democrat_DEF:0 "The United Kingdom"
-GBR_social_liberal:0 "United Kingdom"
+GBR_social_democrat_DEF:0 "영국"
+GBR_social_liberal:0 "영국"
 GBR_social_liberal_ADJ:0 "British"
-GBR_social_liberal_DEF:0 "The United Kingdom"
-GBR_market_liberal:0 "United Kingdom"
+GBR_social_liberal_DEF:0 "영국"
+GBR_market_liberal:0 "영국"
 GBR_market_liberal_ADJ:0 "British"
-GBR_market_liberal_DEF:0 "The United Kingdom"
-GBR_social_conservative:0 "United Kingdom"
+GBR_market_liberal_DEF:0 "영국"
+GBR_social_conservative:0 "영국"
 GBR_social_conservative_ADJ:0 "British"
-GBR_social_conservative_DEF:0 "The United Kingdom"
-GBR_authoritarian_democrat:0 "United Kingdom"
+GBR_social_conservative_DEF:0 "영국"
+GBR_authoritarian_democrat:0 "영국"
 GBR_authoritarian_democrat_ADJ:0 "British"
-GBR_authoritarian_democrat_DEF:0 "The United Kingdom"
-GBR_paternal_autocrat:0 "United Kingdom"
+GBR_authoritarian_democrat_DEF:0 "영국"
+GBR_paternal_autocrat:0 "영국"
 GBR_paternal_autocrat_ADJ:0 "British"
-GBR_paternal_autocrat_DEF:0 "The United Kingdom"
-GBR_national_populist:0 "United Kingdom"
+GBR_paternal_autocrat_DEF:0 "영국"
+GBR_national_populist:0 "영국"
 GBR_national_populist_ADJ:0 "British"
-GBR_national_populist_DEF:0 "The United Kingdom"
+GBR_national_populist_DEF:0 "영국"
 
 GEO_totalist:0 "Socialist Republic of Georgia"
 GEO_totalist_ADJ:0 "Georgian"
